kubernetes/persistent-volume.yaml
# I think I need to use either db-deploy or persistent-volume, but not both. 
apiVersion: v1
kind: Service
metadata:
  name: mysql-db-service
spec:
  selector:
    app: mysql-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306 
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-sfs
spec:
  selector:
    matchLabels:
      app: mysql-db
  serviceName: mysql-db-service
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      containers:
      - image: mysql:latest
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
# 3
